fix formatting in the table for better spacing

--- a/output.css
+++ b/output.css
@@ -706,6 +706,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -727,6 +731,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .shadow-md {
